--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@emotion/styled": "^11.14.1",
     "@tanstack/react-query": "^5.90.5",
     "axios": "^1.13.1",
+    "firebase": "^12.5.0",
     "framer-motion": "^12.23.24",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.65.0",
+    "react-icons": "^5.5.0",
     "react-router": "^7.9.4",
     "zustand": "^5.0.8"
   },
